## Makefile.am -- Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = dejagnu

RUNTESTDEFAULTFLAGS = --srcdir $$srcdir/test

SUBDIRS = wml \
  rel_chart \
  gis \
  herd \
  prob_dist \
  reporting \
  models \
  src \
  smherds2xml \
  sm3herds2xml \
  xml2sm3herds \
  filters \
  dll \
  doc
mandir= $(exec_prefix)/man
man1_MANS=naadsm.1
EXTRA_DIST = Doxyfile doxygen.css graph.py naadsm.1 INSTALL.html

