## Makefile.am -- Process this file with automake to produce Makefile.in

# Include the Windows DLL build files in the distribution file.

EXTRA_DIST = Makefile.win \
  naadsm.dev \
  naadsm.layout \
  naadsm_private.h \
  naadsm_private.rc \
  naadsm_private.res \
  libnaadsm.def \
  libcheyenne.def \
  config.h \
  ltdlconfig.h \
  ltdl.h \
  ltdl.c
